refactor(CBS-256567:LN-58183:LN-58805): fix open case inputs
- Add TradeLoanTypeIdProjection for efficient loan type lookups by code
- Enhance repository methods with getByCode_Value and findByCode_Value operations
- Refactor FacilityValidator with improved async validation and error handling
- Simplify OriginateLoanFacilityRequest structure and remove redundant fields
- Update DependencyLoader and FacilityBuilder with cleaner dependency injection
- Optimize ValueObjectMapper with improved null safety and validation
- Clean up import organization across persistence and application layers
- Remove duplicate validation logic and consolidate error handling
- Update maven dependencies and configuration files